# lead_scoring_projet1

./: .gitignore  README.md  activate.sh  pyproject.toml
notebooks/: utilities_eda_cat.py  utilities_eda_num.py  utilities_graph.py  utilities_interpretabilite.py  utilities_modele.py
src/: __init__.py
src/application/: model.py  predict.py  train.py
src/domain/: build_features.py  cleaning.py
src/infrastructure/: make_dataset.py
src/settings/: base.py  column_names.py
