[tool.poetry]
name = "dbjb"
version = "0.1.0"
description = "Yotta_ML-Project-Fall-2020_Dorota-Jerome"
authors = ["Dorota Bailly <dorota.bailly@gmail.com>", "Jerome Blin <blinjrm@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
argparse = "^1.4.0"
scikit-learn = "^0.23.2"
category-encoders = "^2.2.2"
treeinterpreter = "^0.2.2"
plotly = "^4.12.0"
optuna = "^2.3.0"
jupyterlab = "^2.2.9"
catboost = "^0.24.2"
seaborn = "^0.11.0"
mlxtend = "^0.17.3"
pycountry-convert = "^0.7.2"
isort = "^5.6.4"
scikit-plot = "^0.3.7"
shap = "^0.37.0"
eli5 = "^0.10.1"
pandas-profiling = "^2.9.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
